; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ibm_newemac/extr_phy.c_gpcs_phy_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ibm_newemac/extr_phy.c_gpcs_phy_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mii_phy = type { i32 (i32, i32, i32)*, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mii_phy*, i32)* @gpcs_phy_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gpcs_phy_read(%struct.mii_phy* %0, i32 %1) #0 {
  %3 = alloca %struct.mii_phy*, align 8
  %4 = alloca i32, align 4
  store %struct.mii_phy* %0, %struct.mii_phy** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.mii_phy*, %struct.mii_phy** %3, align 8
  %6 = getelementptr inbounds %struct.mii_phy, %struct.mii_phy* %5, i32 0, i32 0
  %7 = load i32 (i32, i32, i32)*, i32 (i32, i32, i32)** %6, align 8
  %8 = load %struct.mii_phy*, %struct.mii_phy** %3, align 8
  %9 = getelementptr inbounds %struct.mii_phy, %struct.mii_phy* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.mii_phy*, %struct.mii_phy** %3, align 8
  %12 = getelementptr inbounds %struct.mii_phy, %struct.mii_phy* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 %7(i32 %10, i32 %13, i32 %14)
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
